--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+flask = "*"
+flask-sqlalchemy = "*"
+flask-migrate = "*"
+flask-cors = "*"
+flask-restful = "*"
+sqlalchemy = "*"
+flask-bcrypt = "*"
 
 [dev-packages]
 
